--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ logging.config=classpath:log4j2.xml
 
 #datasource b-force
 spring.datasource.bf.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.bf.url=jdbc:mysql://localhost:3306/b-force?characterEncoding=utf8&useSSL=true
+spring.datasource.bf.url=jdbc:mysql://192.168.18.242:3306/b-force?characterEncoding=utf8&useSSL=true
 spring.datasource.bf.username=root
 spring.datasource.bf.password=root
 
 spring.datasource.bfscrm.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.bfscrm.url=jdbc:mysql://localhost:3306/b-force-scrm?characterEncoding=utf8&useSSL=true
+spring.datasource.bfscrm.url=jdbc:mysql://192.168.18.242:3306/b-force-scrm?characterEncoding=utf8&useSSL=true
 spring.datasource.bfscrm.username=root
 spring.datasource.bfscrm.password=root
 
@@ -45,10 +45,23 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #redis
-jedis.pool.host=127.0.0.1
-jedis.pool.port=root
-jedis.pool.password=root
+jedis.pool.host=192.168.18.242
+jedis.pool.port=6379
+jedis.pool.password=yuntu654321
 jedis.pool.timeout=5000
 jedis.pool.config.maxTotal=256
 jedis.pool.config.maxIdle=3
 jedis.pool.config.maxWaitMillis=5000
+
+# REDIS (RedisProperties)
+spring.redis.database=0
+spring.redis.host=192.168.18.242
+spring.redis.port=6379
+spring.redis.password=yuntu654321
+spring.redis.pool.max-active=256
+spring.redis.pool.max-wait=-5000
+spring.redis.pool.max-idle=3
+spring.redis.pool.min-idle=0
+spring.redis.timeout=5000
+
+spring.session.store-type=redis
