--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+	<dependency>
+		<groupId>org.springframework.session</groupId>
+		<artifactId>spring-session-data-redis</artifactId>
+
+	</dependency>
+
 	</dependencies>
 
 	<!-- 在POM中配置构件部署地址 -->
