--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 #logging
 logging.config=classpath:log4j2.xml
 
-#datasource
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.18.242:3306/b-force?characterEncoding=utf8&useSSL=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-
 #datasource b-force
 spring.datasource.bf.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.bf.url=jdbc:mysql://192.168.18.242:3306/b-force?characterEncoding=utf8&useSSL=true
@@ -44,15 +38,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-#redis
-jedis.pool.host=192.168.18.242
-jedis.pool.port=6379
-jedis.pool.password=yuntu654321
-jedis.pool.timeout=5000
-jedis.pool.config.maxTotal=256
-jedis.pool.config.maxIdle=3
-jedis.pool.config.maxWaitMillis=5000
-
 # REDIS (RedisProperties)
 spring.redis.database=0
 spring.redis.host=192.168.18.242
@@ -64,4 +49,13 @@ spring.redis.pool.max-idle=3
 spring.redis.pool.min-idle=0
 spring.redis.timeout=5000
 
+# session config
 spring.session.store-type=redis
+
+# cookie domain
+yuntu.cookie.domain=.b-force.cn
+yuntu.cookie.domain.test=.test.bf.cn
+
+# sms tool
+#api.tools.sms=http://192.168.18.200:8080/Tools/sms/temp.do
+api.tools.sms=http://192.168.18.187:8089/Tools/sms/temp.do
