拦截权限验证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,9 +53,8 @@ spring.redis.timeout=5000
 spring.session.store-type=redis
 
 # cookie domain
-yuntu.cookie.domain=.b-force.cn
-yuntu.cookie.domain.test=.test.bf.cn
+yuntu.cookie.domain=b-force.cn
+yuntu.cookie.domain.test=test.bf.cn
 
 # sms tool
-#api.tools.sms=http://192.168.18.200:8080/Tools/sms/temp.do
-api.tools.sms=http://192.168.18.187:8089/Tools/sms/temp.do
+api.tools.sms=http://192.168.18.200:8080/Tools/sms/temp.do
