--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,5 +56,6 @@ spring.session.store-type=redis
 yuntu.cookie.domain=b-force.cn
 yuntu.cookie.domain.test=test.bf.cn
 
+allow.ip=127.0.0.1,10.30.34.169,106.15.44.228,115.236.69.110,192.168.18.200,192.168.18.57
 # sms tool
 api.tools.sms=http://192.168.18.200:8080/Tools/sms/temp.do
